# dbp-learn

./: Dockerfile  Makefile  README.md  db_requests.txt  docker-compose.ci.yml  docker-compose.yml  env-variables.env  newrelic.ini  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0002_user_role.py  0003_tag_task.py  0004_alter_task_deadline_alter_task_description_and_more.py  0005_alter_task_tags.py  0006_user_date_of_birth_user_phone.py  0007_user_avatar_picture.py
main/models/: task.py  user.py
main/services/: single_resource.py
task_manager/: settings.py  urls.py
test/: base.py  factory_base.py  test_admin.py  test_email_service.py  test_jwtauth.py  test_tag.py  test_task.py  test_user.py
test/base/: __init__.py  action_client.py  base.py  factory_base.py  model_resource.py
test/base/factories/: __init__.py  tag.py  task.py  user.py
